crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__engn4175.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Male",
            "speaker_code": "M1"
          },
          {
            "name": null,
            "role": "Male",
            "speaker_code": "M2"
          },
          {
            "name": null,
            "role": "Female",
            "speaker_code": "F1"
          },
          {
            "name": null,
            "role": "Female",
            "speaker_code": "F2"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "options": [
          "CA"
        ],
        "type": "options"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "cf",
        "language": "eng",
        "role": "Male",
        "speaker": "M1",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "cf",
        "language": "eng",
        "role": "Male",
        "speaker": "M2",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "cf",
        "language": "eng",
        "role": "Female",
        "speaker": "F1",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "cf",
        "language": "eng",
        "role": "Female",
        "speaker": "F2",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "filename": "engn4175",
        "media_type": "audio",
        "type": "media"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "M1 is 31 w 25yrs of school, Pittsburgh, F1 speaks only for\n\tthe last two minutes, F2 in the last minute, F1 is M2's wife, F2 is\n\tM1's wife.",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "transcriber": "Sarah Longstaff",
        "type": "transcriber"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Probably because one of them is on a digital phone, the\n\tsignal during overlap is often broken up. This is indicated with\n\t[% broken].",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": {
                    "delimiter_type": "softer",
                    "span": {
                      "end": 564,
                      "start": 562
                    }
                  },
                  "type": "ca_delimiter"
                },
                {
                  "content": {
                    "element_type": "inhalation",
                    "span": {
                      "end": 567,
                      "start": 564
                    }
                  },
                  "type": "ca_element"
                },
                {
                  "content": "hhh",
                  "type": "text"
                },
                {
                  "content": {
                    "delimiter_type": "softer",
                    "span": {
                      "end": 572,
                      "start": 570
                    }
                  },
                  "type": "ca_delimiter"
                }
              ],
              "raw_text": "°∙hhh°",
              "span": {
                "end": 572,
                "start": 562
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "actually",
                  "type": "text"
                }
              ],
              "raw_text": "actually",
              "span": {
                "end": 581,
                "start": 573
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "met",
                  "type": "text"
                }
              ],
              "raw_text": "met",
              "span": {
                "end": 585,
                "start": 582
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "him",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 590,
                      "start": 589
                    }
                  },
                  "type": "lengthening"
                }
              ],
              "raw_text": "him:",
              "span": {
                "end": 590,
                "start": 586
              },
              "type": "word"
            },
            {
              "kind": "level",
              "type": "separator"
            },
            {
              "end_ms": 95651,
              "start_ms": 94531,
              "type": "internal_bullet"
            }
          ]
        },
        "speaker": "M2"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "F1": {
      "birth_date": null,
      "code": "F1",
      "id": {
        "corpus": "cf",
        "language": "eng",
        "role": "Female",
        "speaker": "F1"
      },
      "name": null,
      "role": "Female"
    },
    "F2": {
      "birth_date": null,
      "code": "F2",
      "id": {
        "corpus": "cf",
        "language": "eng",
        "role": "Female",
        "speaker": "F2"
      },
      "name": null,
      "role": "Female"
    },
    "M1": {
      "birth_date": null,
      "code": "M1",
      "id": {
        "corpus": "cf",
        "language": "eng",
        "role": "Male",
        "speaker": "M1"
      },
      "name": null,
      "role": "Male"
    },
    "M2": {
      "birth_date": null,
      "code": "M2",
      "id": {
        "corpus": "cf",
        "language": "eng",
        "role": "Male",
        "speaker": "M2"
      },
      "name": null,
      "role": "Male"
    }
  }
}
