crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__errors-and-replacements.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Error markers, replacements, and explanations",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: error_marker_annotation, replacement, explanation_annotation,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "alt_annotation, para_annotation, percent_annotation, exclude_marker, duration_annotation",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "whenn",
              "content": [
                {
                  "content": "whenn",
                  "type": "text"
                }
              ],
              "raw_text": "whenn",
              "scoped_annotations": [
                {
                  "code": null,
                  "type": "error"
                }
              ],
              "type": "annotated_word"
            },
            {
              "cleaned_text": "is",
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "type": "word"
            },
            {
              "cleaned_text": "it",
              "content": [
                {
                  "content": "it",
                  "type": "text"
                }
              ],
              "raw_text": "it",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "replacement": {
                "words": [
                  {
                    "cleaned_text": "rockinghorse",
                    "content": [
                      {
                        "content": "rocking",
                        "type": "text"
                      },
                      {
                        "content": {
                          "span": {
                            "end": 423,
                            "start": 422
                          }
                        },
                        "type": "compound_marker"
                      },
                      {
                        "content": "horse",
                        "type": "text"
                      }
                    ],
                    "raw_text": "rocking+horse"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "code": null,
                  "type": "error"
                }
              ],
              "type": "replaced_word",
              "word": {
                "cleaned_text": "rockinghouse",
                "content": [
                  {
                    "content": "rocking",
                    "type": "text"
                  },
                  {
                    "content": {
                      "span": {
                        "end": 406,
                        "start": 405
                      }
                    },
                    "type": "compound_marker"
                  },
                  {
                    "content": "house",
                    "type": "text"
                  }
                ],
                "raw_text": "rocking+house"
              }
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "whenever",
              "content": [
                {
                  "content": "when",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 447,
                      "start": 446
                    }
                  },
                  "type": "compound_marker"
                },
                {
                  "content": "ever",
                  "type": "text"
                }
              ],
              "raw_text": "when+ever",
              "scoped_annotations": [
                {
                  "text": "foo bar",
                  "type": "paralinguistic"
                },
                {
                  "text": "ah+er",
                  "type": "alternative"
                }
              ],
              "type": "annotated_word"
            },
            {
              "cleaned_text": "will",
              "content": [
                {
                  "content": "will",
                  "type": "text"
                }
              ],
              "raw_text": "will",
              "type": "word"
            },
            {
              "cleaned_text": "you",
              "content": [
                {
                  "content": "you",
                  "type": "text"
                }
              ],
              "raw_text": "you",
              "type": "word"
            },
            {
              "cleaned_text": "go",
              "content": [
                {
                  "content": "go",
                  "type": "text"
                }
              ],
              "raw_text": "go",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "this",
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "type": "word"
            },
            {
              "cleaned_text": "is",
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "type": "word"
            },
            {
              "cleaned_text": "child",
              "content": [
                {
                  "content": "child",
                  "type": "text"
                }
              ],
              "raw_text": "child",
              "scoped_annotations": [
                {
                  "text": "a+er b",
                  "type": "paralinguistic"
                }
              ],
              "type": "annotated_word"
            },
            {
              "cleaned_text": "speaking",
              "content": [
                {
                  "content": "speaking",
                  "type": "text"
                }
              ],
              "raw_text": "speaking",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "this",
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "type": "word"
            },
            {
              "cleaned_text": "is",
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "type": "word"
            },
            {
              "cleaned_text": "child",
              "content": [
                {
                  "content": "child",
                  "type": "text"
                }
              ],
              "raw_text": "child",
              "scoped_annotations": [
                {
                  "text": "a+er b",
                  "type": "explanation"
                }
              ],
              "type": "annotated_word"
            },
            {
              "cleaned_text": "speaking",
              "content": [
                {
                  "content": "speaking",
                  "type": "text"
                }
              ],
              "raw_text": "speaking",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "this",
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "type": "word"
            },
            {
              "cleaned_text": "is",
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "type": "word"
            },
            {
              "replacement": {
                "words": [
                  {
                    "cleaned_text": "aer",
                    "content": [
                      {
                        "content": "a",
                        "type": "text"
                      },
                      {
                        "content": {
                          "span": {
                            "end": 600,
                            "start": 599
                          }
                        },
                        "type": "compound_marker"
                      },
                      {
                        "content": "er",
                        "type": "text"
                      }
                    ],
                    "raw_text": "a+er"
                  },
                  {
                    "cleaned_text": "b",
                    "content": [
                      {
                        "content": "b",
                        "type": "text"
                      }
                    ],
                    "raw_text": "b"
                  }
                ]
              },
              "type": "replaced_word",
              "word": {
                "cleaned_text": "child",
                "content": [
                  {
                    "content": "child",
                    "type": "text"
                  }
                ],
                "raw_text": "child"
              }
            },
            {
              "cleaned_text": "speaking",
              "content": [
                {
                  "content": "speaking",
                  "type": "text"
                }
              ],
              "raw_text": "speaking",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "this",
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "type": "word"
            },
            {
              "cleaned_text": "is",
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "type": "word"
            },
            {
              "cleaned_text": "child",
              "content": [
                {
                  "content": "child",
                  "type": "text"
                }
              ],
              "raw_text": "child",
              "scoped_annotations": [
                {
                  "text": "a+er b",
                  "type": "percentcomment"
                }
              ],
              "type": "annotated_word"
            },
            {
              "cleaned_text": "speaking",
              "content": [
                {
                  "content": "speaking",
                  "type": "text"
                }
              ],
              "raw_text": "speaking",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "this",
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "type": "word"
            },
            {
              "cleaned_text": "is",
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "scoped_annotations": [
                {
                  "type": "exclude"
                }
              ],
              "type": "annotated_word"
            },
            {
              "cleaned_text": "child",
              "content": [
                {
                  "content": "child",
                  "type": "text"
                }
              ],
              "raw_text": "child",
              "type": "word"
            },
            {
              "cleaned_text": "speaking",
              "content": [
                {
                  "content": "speaking",
                  "type": "text"
                }
              ],
              "raw_text": "speaking",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
